# images

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pylintrc  pyproject.toml  wait_for_db.py
exceptions/: exceptions.py
models/: models.py
services/: database.py  image_processing.py
tasks/: config.py  linting.py
tests/: large_sample_file.csv  sample_file.csv  sample_image.json  test_database.py  test_image_processing.py
